Rrestructuring mini sections

--- a/_posts/thesis_chapters/2025-6-6-Gdps_v3.md
+++ b/_posts/thesis_chapters/2025-6-6-Gdps_v3.md
@@ -259,7 +259,9 @@ Video evidence and observational journal notes highlight the potential of coupli
 
 <!-- INSERT SHORTER VIGNETTE HERE. ADD ONE WITH TIMED DETAIL? -->
 
-    Toby finishes playtesting and navigates to the page containing a menu of game design patterns [^ggcm]. He clicks on the image of Game Mechanics - Moving Enemies.This opens up a code project using the same code base as Toby’s existing project. He takes time to examine the start of code carefully. Toby then clicks on the tab of his own game code and examines how it is different. He returns to the example code and scrolls down and examines the code needed to patch into his game and after hesitation he returns to copy the full code needed from the example. He then navigates to the same section of his own code project template. Carefully pasting the code into this space and then navigates to the live preview of his game to check the result. The game now shows a new enemy moving back and forth horizontally. Toby playtests his game and struggles to get past this new enemy. He tentatively alters parameters of the code and seemingly inadvertently changes the direction of the  movement of the hazard to vertical.
+    Toby finishes playtesting and navigates to the page containing a menu of game design patterns [^ggcm]. He navigates to a code snippet project illustrating a game mechanic of a moving enemy. He takes time to examine the start of code carefully. Toby then clicks on the tab of his own game code and examines how it is different. He returns to the example code and scrolls down and examines the code needed to patch into his game and after hesitation he returns to copy the full code needed from the example. He then navigates to the same section of his own code project template. Carefully pasting the code into the right area and check the result, correctly showing a new enemy moving back and forth horizontally. Toby playtests his game and struggles to get past this new enemy. He tentatively alters parameters of the code and seemingly inadvertently changes the direction of the  movement of the hazard to vertical. He laughs and comments to his family: "Mine's just going up and down! Granny! I've got mine to up and down." Later iterations to his code over the next 30 minutes include changes to allow different moving enemies for each level, and changes to the movement parameters of the enemy of level 2, as seen in Figure 6.x below.
+
+![Figure 6.x - Code pasted from snippet example from Vignette 1 ](./Pictures/vig_1_cap.v1.png){width=95%}
 
 
 <!-- at the following location https://glitch.com/edit/#!/sgte-example-moving-enemy?path=js%2Fgame.js%3A1%3A0
@@ -271,6 +273,8 @@ Toby shows great increasing fluidity in the process of navigation of between doc
 Debugging is both motivated and facilitated by the participants strong understanding driven of what the desired GDP should provoke in the target behaviour of the games. The need to get both the starting and ending position of the movement of the imported enemy provokes several iterations of debugging [^db].  
 
 Although code was provided, mistakes occurred in practice and additional customisations were introduced. The process of code patching process often provoked project errors in the form of  _glitches_ [^gl]. As a facilitator I mobilised participants existing knowledge of their chosen GDP behaviour to compare with the erroneous behaviour of the glitch. I would try to use humour when pointing out the glitch within this process as a strategy to mitigate the potentially frustrating process of debugging.
+
+DEVELOP GLITCHES / ERROR TYPES TO MAKE STRONGER IF NEEDED?
 
 <!-- As a facilitator (see Appendix.patching), I made explicit the path between choosing a pattern to work on and the mechanics of accessing documentation and the code patching process.  -->
 
@@ -351,12 +355,14 @@ As previously explored I had a reluctance to shift learners away from the practi
 ## GDPs used in the process of guided participation
 
 
+This section explores how GDPs feature in interpersonal interactions, particularly as tools that support guided participation in collaborative tasks. Drawing on video data, I examine how GDPs mediate shared activity, especially in exchanges between children and parents. Three categories are highlighted: the use of the provided GDP menu and documentation, GDPs as tools for project ideation and prioritisation, and their role in shaping the division of labour.
+<!--
 This section examines data on the use of GDPs from the perspective of interpersonal interaction. Here, the process of being guided into planned activities or peer collaboration is exploratory, contributing to interpersonal processes that facilitate the completion of tasks. As outlined in the previous section, personal understandings of knowledge can be observed within these interpersonal interactions, particularly in exchanges between parents and children. Based on observations of video data, I describe how GDPs are employed in diverse mediational strategies.
 
-UPDATE THIS
+
 I focus on three key categories of interaction that incorporate GDPs: the use of a provided menu of GDPs and supporting documentation, the role of GDPs in project ideation and prioritisation, and their function within the division of labour.
 
-NOTE - MENTION THE MENU GUIDED BY  ME - THUS MY INPUT INTO GUIDED PARTICIPATION .
+NOTE - MENTION THE MENU GUIDED BY  ME - THUS MY INPUT INTO GUIDED PARTICIPATION . -->
 
 
 <!-- In particular how , ideation, division of labour and prioritisation, and the adoption of technical processes intersect with the use of GDPs. -->
@@ -366,64 +372,45 @@ NOTE THIS HAS BEEN REMOVED
 ## The use of GDPs examined from an interpersonal focus
 This section examines the use of GDPs to facilitate guided participation via interpersonal interactions in game making. Guided participation in this context involved, guidance on organising design activities, various forms of problem solving and help to shift design perspectives. While the primary source of material is from pair interactions between children and parents, at times peer interaction between non-pairs developed into guidance. For example, in the in the example above where Toby provides assistance for Bertie  in adding levels to his game
 . -->
-
 ### Use of a menu of GDPs to assist project navigation and use of documentation
 
-<!-- DRAW ON CHAPTER 4 MUTUAL EVOLUTION - AND FIND EXAMPLES . -->
-<!-- - RECAP DOCUMENTATION TENSIONS HERE WITH FOCUS ON AGENCY
-- ALSO FOCUS ON MY ROLE AS A DESIGNER INTRODUCING DOCUMENTATION AND STRATEGIES (PERHAPS MAPS TOO IN LINE WITH 5TH D) -->
 
-<!-- However, not all participants used the provided instructions and developed diverse methods to access support for implementing patterns (IS THIS PART NEEDED?). -->
+<!-- STRUCTURE VIA THIS MINI TEMPLATE
 
-Chapter 5 introduced my provision of a curated collection (menu) of gameplay design patterns to address the tension between participants' choice and the need for documentation to support the technical implementation of code structures. In the vignette extract above Toby uses the graphical menu of patterns  to choose and implement a features. using supporting documentation. Later he is able to assisting others in adding the same GDPs to their games (see V1.b).As explored in Chapter 5, to prioritise participant engagement, I avoid a principles-first instruction approach (either to the whole group or to individuals). The use of shorter, just-in-time tutorials here reduces barriers associated with more extensive instruction-based approaches, particularly those related to literacy [@dietz_design_2021; @resnick_coding_2020]. In this section, I outline findings on the use of the menu of GDPs, focusing on interpersonal interactions.
-
-
-
-<!-- In Vignete 9, I address the whole group, describing the webpage presenting the menu of GDPs as a hub to help choose project goals and locate tutorials and code examples. "It’s almost like this is our control panel. You decide what you want to do next and we jump off from there." -->
-<!-- **tautology** Given the integration of these elements into the learning design from P2 onwards, it would seem natural that participants would use the provided framework, at least in some capacity. Despite this, the evolving use of this documentation, the variations in its use, and the interpersonal interactions surrounding it merit further attention due to the diversity, evolution, and fundamental importance of GDP use at this interpersonal scope. -->
+Mini-intro: What’s being explored and why it matters
+Empirical evidence: Table or vignette extract
+Interpretation: What it shows (use, affect, interaction)
+Variation: What didn’t happen or where it differed
+Commentary: Brief theoretical reflection or methodological note
+Bridge or close: One-line takeaway or link to next section -->
 
 
-INSERT SHORTER VIGNETTE OF SUSANNA AND T HERE.
+In this section, I outline findings on the use of the menu of GDPs, focusing on interpersonal interactions. Chapter 5 introduced the provision of a curated collection (menu) of gameplay design patterns to address the tension between participants' choice and the need for documentation to support the technical implementation of code structures. As explored in Chapter 5, to prioritise participant engagement, I avoid a principles-first instruction approach (either to the whole group or to individuals). The use of shorter, just-in-time tutorials reduces barriers associated with more extensive instruction-based approaches, particularly those related to literacy [@dietz_design_2021; @resnick_coding_2020].
 
-Vignette 2 (V2.a) observes parent, indicated by (p), Susanna(p)'s use of a tutorial to address the goal of implementing her child's chosen GDPs. Susanna, who is limited in her programming skills but who avoiding seeking facilitator help (see V2.b), leverages the concept of GDPs, to independently access written step-by-step instructions. Tehillah(c)'s choice over which GDPs they tackle has helped create a personal connection to the game, see Tehillah's positive reaction in the vignette above in her signing of the name of the key and door pattern.
+In the Vignette 1 extract above, Toby uses the graphical menu of patterns as a starting point to help him to choose, find and implement a GDP feature using supporting documentation. Later he is able to assist others in adding the same GDPs to their games [^rc2].
 
-NOTES  - MAKE THE LINK CLEARER BETWEEN USE OF GDP AND POSITIVE AFFECT.
-V11 - WAS THE MAPS ONE-
+The following vignette extract concerns a family that had taken a different approach to accessing documentation. In the minutes leading up to extract, Susanna (parent) attempting to implement a key and door mechanic to the game. Meanwhile Tehillah (child), unable to do such coding or debugging, expressed boredom [^kd]. Susanna had been following the step-by-step written instructions but when Susanna had not been able to progress, she sent Tehillah to get my help and I worked with her to find the problem.
 
-<!-- OTHER DATA  HERE - Other examples include,
-Examples from the data of participants using GDPs as a framework for organisation and project navigations. -->
+| **Dialogue** | **Activity** |
+|--------------|--------------|
+| Susanna: Thank you. Did you see Tehillah?<br>Tehillah: Did it do it?<br>Susanna: Yes | Mick has just ceded computer to Susanna after solving a problem which had occurred due to |
+| Susanna: I’ll reload it. Here you go | Susanna presses refresh key to reload the game |
+| Tehillah: (Laughs) | Tehillah moves laptop to point towards her and takes over using the keyboard |
+| Tehillah: (Makes excited cat noise) | Tehillah uses arrow keys to control the game and checks if player progression to level 2 is working. She reaches level 2, where there is no door or key. |
+| Tehillah: We need a door in this one.<br>I want to make more levels now.<br>So you can put lots of doors and lots of keys.<br>(in a rhythmic voice) Key Door Key Door Key Door<br>(in a sing song voice) Key Door Level. Key Door Level, Key Door Level |  |
+|  | Susanna moves computer back to take over the keyboard. She changes browser tab and navigates to the code section for level and component design. |
+| S: Well. Where are you going to put your door in level two?<br>Do you want to change the layout at all? | Susanna gestures to screen |
+| Tehillah: What’s door?<br>Susanna: d<br>Tehillah: Ok | Susanna doesn’t move the laptop but gets closer to take over the keyboard |
+| Tehillah: d. Door right there. | Tehillah inserts a “d” in an array high above a platform |
+| Susanna: And where’s the key going?<br>Must be quite hard to get to that door.<br>Key is K |  |
 
-While the evidence supports the potential of a menu of GDPs to address the tensions between choice-based approaches and the danger of a lack of relevant scaffolding, there are some important clarifications to make at this point. Firstly, not all participants engage with this menu. For example, in Vignette 3 (V3.a), Ed lets his father take the lead in accessing documentation. Other individuals learn to implement GDPs from peers, a process explored in later section. Secondly, becase the GDP menu (and concepts) were introduced by myself as navigational and organisational tool for use by participants, it seems logical that participant should use the for that purpose. The danger here is of circular reasoning in methodology which could impact the validity of claims here. Despite these clarification the data clearly shows the utility of the menu of GDP to directly help some participants, as a valid application of just in time documentation principles and as a foundational source later propagation and evolution of GDP practices by participants.
+**Table 6.x** – Extract of Vignette 2 showing interpersonal interaction and documentation use.
 
-<!-- In addition, this process of using GDPs in this way was also discovered via an exploratory DBR approach, and thus its introduction is also significant and cannot be divorced from the aspect of participant reaction. Additionally, the potential of GDPs as a germ cell concept (as explored in Chapters 3 and 5) is explored in greater depth in the following chapter. -->
+Vignette 2 shows the parent [^ip], Susanna(p)'s use of a tutorial to address the goal of implementing her child's chosen GDPs. Susanna, who is limited in her programming skills but who avoids seeking facilitator help (see V2.b), leverages the concept of GDPs to independently access written step-by-step instructions.
 
-<!-- NOTE ARE DIFFERENT APPROACHES BEST EXPLORED HERE OR SOMEWHERE ELSE? -->
+Tehillah(c)'s choice over which GDPs they tackle has helped create a personal connection to the game. Her positive reaction in the vignette above, including the naming and rhythmical chanting of “key” and “door,” indicates affective engagement closely tied to her interaction with the GDP concept. There is also evidence of affective engagement in Toby's laughter and calling out to his Granny when getting unexpected results.
 
-<!--
-At this phase of research documentation included; comment help within the game template; a step-by-step tutorial which build up the code of the starting template and explore the computing concepts, a menu of self-contained code examples of game elements game elements or game design patterns (GDPs); supporting tutorials briefly explaining how to add the new code needed to implement the patterns. -->
-
-
-
-<!-- In addition, Direct help between peer participants, as outlined other section, was a key process of the game making comshowed the child sharing an independent style with Susanna butmunity from early stages.
-However, to overcome scarcity of facilitator support, direct help processes were seeded by other forms of support resources and written documentation. -->
-
-
-<!-- #### Use of simple code examples which demonstrate the pattern in isolation -->
-<!--NOTE DEVELOP THIS EXAMPLE - RELATE TO PRACTICE OF CODE PATCHING (EXPLORED IN PREVIOUS CHAPTER) -->
-<!-- Code examples were initially the starting resource. The idea being it was quick to see the behaviour in context. The, use of code examples by Toby in 2019-05-08 shows the effectiveness of the use of code examples by participants.  -->
-
-
-<!-- The timings of the process of patching the code show that the learner is hesitant in the process. He checks the code and then checks the game output to test that the code creates the desired behaviour. Once this is verified he progresses to copy and paste the code from the create function of the sample code to the create function of his own source code. -->
-
-
-<!-- NOTE - PERHAPS INTEGRATE PART OF THE CODE PATCHING PROCESS FOR THIS SECTION -->
-
-<!-- Towards the end of phase 1 I began to create code examples to illustrate of how particular commonly requested game features were implemented. These barebone game projects were hosted on a code playground. An online document in our shared google drive working space linked to these examples. I would help participants access this when they requested a certain feature. This list of game features began to grow. For phase one these code example were not particularly successful at increasing learner independence. There were differences in the code structure of their games and the examples and translation was not intuitive. -->
-
-
-
-<!-- NOTE REMOVED
-This section prioritises describing the code patching process using examples and guided instructions rather than the first principles.   -->
+While the evidence supports the potential of a menu of GDPs to address the tensions between choice-based approaches and the danger of a lack of relevant scaffolding, there are some important clarifications to make at this point. Firstly, not all participants engage with this menu. For example, in Vignette 3, Ed lets his father take the lead in accessing documentation. Other individuals learn to implement GDPs from peers, a process explored in a later section. Secondly, because the GDP menu (and concepts) were introduced by myself as a navigational and organisational tool for use by participants, it seems logical that participants should use them for that purpose. The danger here is of circular reasoning in methodology which could impact the validity of claims. Despite these clarifications, the data clearly shows the utility of the menu of GDPs to directly help some participants, a clear example of just-in-time documentation supporting participant-led learning  and as a foundational source for the later propagation and evolution of GDP practices by participants.
 
 
 ### GDPs used to scaffold ideation and prioritisation processes
@@ -432,30 +419,36 @@ This section prioritises describing the code patching process using examples and
 <!-- Other techniques that leveraged the characteristics of game design patterns to support the ideation process emerged in community design activities. -->
 <!-- NOTE - ADD MORE ON GESTURING  -->
 
+This section outlines how the use of GDP concepts and supporting tools were used in ideation and project organisation.
 
-Addressing the tension between participant choice and scaffolding via menu of GDPs, my journal notes on the shift from P1 to P2, I noted that the provision of this menu of GDPs significantly decreased in time spent in the ideation phase by providing scaffolding and restricting choice. Beyond this immediate impact, this section outlines how the use of GDP concepts and supporting tools were used in ideation and project organisation, specifically: as a lingua franca, as a visual prototyping tool, and within participant gestural interaction.
+Chapter 5 outlined one the impact of the provision of the menu of GDPs significantly decreased in time spent in the ideation phase by providing scaffolding and restricting choice.
 
-Video data surfaced frequently use of GDPs terms as a lingua franca to organise and prioritise game making activity. An exchange from Vignette 3 between participants Ed and Mark shows the use of GDP concepts to help resolve a tension between a more chaotic style of working jumping from one goal to another and a parental motivation to prioritise work. The pair's initial listing of features is a brainstorming technique using the approximate names of game design patterns (_get the person animated_, _get an enemy in_, _changing the platforms_, _make a theme tune_). The vignette analysis sees the parent _overwhelmed_ with the child's lack of focus on one pattern "_that’s what I mean, you can’t just skip around like that_."
+In addition, video data surfaced frequent use of GDPs concepts as a way to organise and prioritise game making activity. An exchange from Vignette 3 between participants Ed and Mark shows the use of GDP concepts to help resolve a tension between a more chaotic style of working jumping from one goal to another and a parental motivation to prioritise work. The pair's initial listing of features is a brainstorming technique using the approximate names of game design patterns (_get the person animated_, _get an enemy in_, _changing the platforms_, _make a theme tune_). The use of GDPs as a lingua franca as proposed by
 
+The vignette analysis sees the parent _overwhelmed_ with the child's lack of focus on one pattern "_that’s what I mean, you can’t just skip around like that_."
 
-<!-- THIS IS MORE ON A COMMUNITY LEVEL - AND TECHNICAL PERHAPS MOVE
-In Vignette 5.d, where the parent Madiha wants to export an image from the graphical editing tool and to import this into the game, shows an evolving use of some of the terminology that has been introduced partly by facilitator interventions and partly emerging organically through community interaction. the terms here are used first to request help, and then to discuss emerging community norms. -->
+The following exchange (Table 6.x) captures a moment where the GDP concepts are used to structure a ideation proposing a more radical change of underlying game genre.
 
-<!-- OTHER DATA ON GDP AS LINGUA FRANCA AT VARIOUS STAGES. -->
-<!-- In this interaction above which was used to illustrate Madiha and Nasrin's division of labour, the parent is focused on completing the action of creating a graphical asset of a hazard as part of the activity of adding the GDP of including a hazard into the game. -->
-
-<!-- Mark: I’ve brought the music, and also we could just concentrate on one thing and just change that. You know, keep working through.
-Ed: Yeah. I think I want to get an enemy in - oh no - my person animated.
-Mark: So you want to get your person animated that’s the main thing.
-Mark: Shall we concentrate on that and changing the platforms into something different? -->
-
-In the vignette extract below, home-based knowledge of GDP mechanics is utilised on an interpersonal plane, with Dan(p) helping Toby(c) via guided facilitation to provoke and shape new design ideas. Dan(p) draw on the game playing experiences to promote innovation in the design of the existing template: _"the previous style of game was a platform (makes shape with hands) game wasn't it? You went along and there was gravity pushing down. There are other types of games aren't there?"_ The pair use their knowledge of game play patterns and genre conventions to break out of the genre constraints of starting template.  Here they are charting new territory beyond the curated choices of GDPs and as such may not have vocabulary to express concepts. Both Dan and Toby make extensive use of gestures in their interaction reinforces their spoken references to GDP concepts.
-
-
-INSERT DAN AND TOBY EXTRACT HERE.
+| **Dialogue** | **Activity / Notes / Gestures** |
+|--------------|----------------------------------|
+| Dan: Have you thought about pushing it a bit further and have a different style of game?<br>Toby: What do you mean? |  |
+| Dan: Well the previous style of game was a platform game wasn’t it? You went along and there was gravity pushing down. There are other types of games aren’t there? | Dan makes shape with hands to indicate a platform. Then points downwards to indicate gravity pushing on that platform. Mimics player jumping between platforms. |
+| Toby: Pause. I don’t know what to do though.<br>Dan: Well quite, but what other games are there?<br>Toby: I don’t know er.<br>Dan: Well I tell you what... (muffled)<br>Toby: Erm | Toby navigates to webpage menu of GDPs. |
+| Dan: So. You played them before didn’t you?<br>Toby: What do you mean?<br>Dan: The flying game, that’s a different kind of game.<br>Toby: Oh, like kind of like moving along kind of thing. | Toby moves hand left to right. |
+| Dan: Yeah, and there are games where you are in a world and you have to move around the world like Pac-Man. | Dan points down and moves finger around like an imaginary character moving at right angles. Toby nods. |
+| Dan: There are games where things drop down like Tetris.<br>Toby: …game. You could have a game where every 15 seconds, 10 seconds, you could add an enemy to such and such, a random number between such and such. You could block it somewhere. | Dan makes a shape with hand and moves it up and down. Toby holds up hands to indicate a range of parameters as he says “between such and such.” |
+| Dan: So instead of... instead of the world… the world being sideways, we could have the world being looked down on. | Dan reindicates the change of perspective with hand gestures. |
+| Toby: Hmm. How should I do this then?<br>Dan: That’s a good question. Shall we ask Mick to see if that would mess things up or not? |  |
 
 
-Later in the same session (see V7.12-16), Toby uses the code based tilemap tool to design a maze game instead of a platformer game drawing on existing knowledge of tools and home knowledge of the target game genre to rapidly make revisions without extensive planning. This use of GDPs to allow the spacial exploration of design in a visual and intuitive way suits being mapped onto paper, or onto graphical software which allows for a similarly rapid prototyping. By way of contrast, other pairs take advantage of paper prototyping. For example, Susanna(p) notices the child's difficulty in using cursor and delete/backspace keys to edit a matrix allowing level design. The parent provides a book with grid paper to allow the child to replicate the matrix. The parent is then able to transcribe the design to the code example while engaging the child by checking she has interpreted the design correctly. Interview data with Mark and Ed uncovers complexities in the use of both digital and paper prototyping of related to GDPs explored in more detail in Appendix.tech.prototyping. WHY IMPORTANT?
+In the vignette extract above, home-based knowledge of GDP mechanics is utilised on an interpersonal plane, with Dan(p) helping Toby(c) via guided facilitation to provoke and shape new design ideas. Dan(p) draw on the game playing experiences to promote innovation in the design of the existing template: _"the previous style of game was a platform (makes shape with hands) game wasn't it? You went along and there was gravity pushing down. There are other types of games aren't there?"_ The pair use their knowledge of game play patterns and genre conventions to break out of the genre constraints of starting template.  Here they are charting new territory beyond the curated choices of GDPs and as such may not have vocabulary to express concepts. Both Dan and Toby make extensive use of gestures in their interaction reinforces their spoken references to GDP concepts.
+
+Later in the same session [^v6], Toby uses the code based tilemap tool to design a maze game instead of a platformer game drawing on existing knowledge of tools and home knowledge of the target game genre to rapidly make revisions without extensive planning. This use of GDPs to allow the spacial exploration of design in a visual and intuitive way suits being mapped onto paper, or onto graphical software which allows for a similarly rapid prototyping. By way of contrast, other pairs take advantage of paper prototyping. For example, Susanna notices her child's difficulty in using cursor and delete/backspace keys to edit a matrix allowing level design. The parent provides a book with grid paper to allow the child to replicate the matrix. The parent is then able to transcribe the design to the code example while engaging the child by checking she has interpreted the design correctly. Interview data with Mark and Ed uncovers complexities in the use of both digital and paper prototyping of related to GDPs explored in more detail in Appendix.tech.prototyping.
+WHY IMPORTANT?
+
+This section has addressed use of GDPs within ideation, specifically as a lingua franca, as a visual prototyping tool, and within participant gestural interaction.
+
+LINGUA FRANCA OVERLOAD.
 
 <!-- IS SOME SYNTHESIS NEEDED TO END THIS SECTION? -->
 
@@ -472,6 +465,18 @@ More on role of parent and child to negotiate approaches which maximise engageme
 Somethinkg about more direct link between code and output. - as with block coding - this is an intermediate step.
 -->
 
+
+<!-- THIS IS MORE ON A COMMUNITY LEVEL - AND TECHNICAL PERHAPS MOVE
+In Vignette 5.d, where the parent Madiha wants to export an image from the graphical editing tool and to import this into the game, shows an evolving use of some of the terminology that has been introduced partly by facilitator interventions and partly emerging organically through community interaction. the terms here are used first to request help, and then to discuss emerging community norms. -->
+
+<!-- OTHER DATA ON GDP AS LINGUA FRANCA AT VARIOUS STAGES. -->
+<!-- In this interaction above which was used to illustrate Madiha and Nasrin's division of labour, the parent is focused on completing the action of creating a graphical asset of a hazard as part of the activity of adding the GDP of including a hazard into the game. -->
+
+<!-- Mark: I’ve brought the music, and also we could just concentrate on one thing and just change that. You know, keep working through.
+Ed: Yeah. I think I want to get an enemy in - oh no - my person animated.
+Mark: So you want to get your person animated that’s the main thing.
+Mark: Shall we concentrate on that and changing the platforms into something different? -->
+
 ### GDPs aiding the process of division of labour (1400)
 
 <!-- NOTE - DIVISION OF LABOUR IS IN THE NEXT CHAPTER TOO - REWRITE BASED ON GDP ONLY CONTENT
@@ -480,7 +485,7 @@ CHECK FOR OVERLAP-->
 <!-- NOTE  dol and identities.
 Skills to perform these activities were at often distributed between different family members. For some adult re-enforcing their identities as project managers, and for young participants forming identities as digital specialists.  -->
 
-Addressing division of labour on an interpersonal plane, participants worked mostly as pairs or individuals, alternating between community playtesting and pair/individual design work. An overarching feature of the use of GDPs at this level, in line with existing research on design patterns [@erickson_lingua_2000, @eriksson_using_2019], was a lingua franca. The use of GDP concepts to construct shared language and understanding was found in video data in varied forms related in particular to division of labour between participants.
+Addressing division of labour on an interpersonal plane, participants worked mostly as pairs or individuals, alternating between community playtesting and pair/individual design work. An overarching feature of the use of GDPs at this level, in line with existing research on design patterns [@erickson_lingua_2000; @eriksson_using_2019], was a lingua franca. The use of GDP concepts to construct shared language and understanding was found in video data in varied forms related in particular to division of labour between participants.
 
 In addition, the use of GDPs as an organisational strategy, structuring work processes through implementing modular sub-projects in the form of GDPs can aid division of labour. GDPs feature in processes division of labour in a variety of ways: working knowledge of different types of GDPs can help participants to divide work by working on different patterns or taking on project elements within patterns.
 
@@ -627,12 +632,12 @@ Research related to project based learning (PBL) benefits of working with partic
 
 
 In Chapter 5 and Appendix.tech.gameframework I outlined the use of the MDA (mechanics, dynamics, and aesthetics) framework to theme the presentation of GDPs.
-In the following section I use the MDA themes to explore different examples of use of funds of knowledge and interest by participants.
+In the following section I use the MDA themes to explore different examples of use of repertoires of home interests by participants.
 
-![Illustration 6.x -  MDA as an additional framework promoting multiple means of engagement - mapped to an grouping of GDPs  ](./Pictures/ch_6_mda_dia_2.png){width=95%}
+<!-- ![Illustration 6.x -  MDA as an additional framework promoting multiple means of engagement - mapped to an grouping of GDPs  ](./Pictures/ch_6_mda_dia_2.png){width=95%}
 
 PERHAPS CHANGE THE GRAPHIC TO A TABLE HERE.
-DVELOP THIS A BIT OR LINK TO ANOTHER BIT EXPLORING THIS
+DVELOP THIS A BIT OR LINK TO ANOTHER BIT EXPLORING THIS -->
 
 
 Some participants focused their game making on the aesthetics of their projects. Madiha in the vignette extract above show identification (as an _expert pixel_) with the graphical-making process. Many examples of session data (see Vignette 5) confirm this preference for both Madiha(p) and her daughter Nasrin(c) and interview data shows that this art is also an interest that they pursue at home. Beyond their internal family interaction, the process of bringing that aspect of creativity into their games allows them to share this artistic flair and attention to detail with the emerging learning community. In another example, Mark and Ed designed a game around the character of a train driver that needed to collect coal. In interview data Mark describes the impact of the child feeling like they could bring their own identity and interest into the project. "I know just your eyes lit up when you realised you could expand your interests into gaming." (see Appendix 4.x). Clive(p) and Pearl(p), the grandparents of Toby(c), included a narrative message at the start of their game surfacing the interest and expertise of the family as beekeepers (see Vignette 6) in a way that sparked interest and conversations with other participants.
@@ -1285,3 +1290,11 @@ Returning to Kynigos's interpretation of the half-baked game as a boundary objec
 [^db]: Toby's eventual success in using the code patching and debugging technique was supported by the high level of contextualisation provided by the structuring of the process around GDPs  https://3m.flossmanuals.net/#game-mechanic-add-moving-enemies
 
 [^gl]: I use the term glitch here to refer to errors which allow the game to continues to function but which provoke an unintended effect. See C.debugging for more information.
+
+[^kd]: The support for the key and door pattern is here. https://3m.flossmanuals.net/#game-mechanic-keys-and-doors
+
+<!-- [^ip]: Where unclear, the name of the parent is followd by a a (p) and that of the child by a (c). For example, Susanna(p) and Tehillah(c). -->
+
+[^v6]:  See the reflective commentary in Vignette 6 for a fuller description of this moment.
+
+[^rc2]: See the reflective commentary named _Peer propagation and community uptake of GDPs_ in Vignette 1.
